[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI_elements/Instructions/assets/Book.png" type="Texture" id=1]
[ext_resource path="res://UI_elements/Instructions/assets/Book_Closed.png" type="Texture" id=2]
[ext_resource path="res://UI_elements/Instructions/InstructionBook.gd" type="Script" id=3]
[ext_resource path="res://UI_elements/Instructions/assets/Book_Closed_HIGHLIGHT.png" type="Texture" id=4]
[ext_resource path="res://UI_elements/Instructions/assets/arrow.png" type="Texture" id=5]
[ext_resource path="res://UI_elements/Instructions/assets/arrow_highlight.png" type="Texture" id=6]

[node name="InstructionBook" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookOpen" type="Sprite" parent="."]
position = Vector2( 46.2983, 22.2917 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
centered = false

[node name="ClosedBookBtn" type="TextureButton" parent="."]
margin_left = 557.886
margin_top = 11.4334
margin_right = 981.886
margin_bottom = 450.433
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="TextureButton" parent="."]
margin_left = 551.813
margin_top = 325.517
margin_right = 690.813
margin_bottom = 436.517
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ClosedBookBtn" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GoBack" to="." method="_on_GoBack_pressed"]
